<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/questionTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"

        android:layout_marginEnd="20dp"
        android:text="@string/question"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/buttonAnswer1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- Answer Buttons -->
    <Button
        android:id="@+id/buttonAnswer1"
        android:layout_width="250dp"
        android:layout_height="63dp"
        android:layout_marginStart="80dp"
        android:layout_marginEnd="81dp"
        android:layout_marginBottom="8dp"
        android:backgroundTint="#009999"
        android:text="@string/answer_1"
        app:layout_constraintBottom_toTopOf="@+id/buttonAnswer2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/questionTextView" />

    <Button
        android:id="@+id/buttonAnswer2"
        android:layout_width="250dp"
        android:layout_height="63dp"
        android:layout_marginStart="80dp"
        android:layout_marginEnd="81dp"
        android:layout_marginBottom="8dp"
        android:backgroundTint="#009999"
        android:text="@string/answer_2"
        app:layout_constraintBottom_toTopOf="@+id/buttonAnswer3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonAnswer1" />

    <Button
        android:id="@+id/buttonAnswer3"
        android:layout_width="250dp"
        android:layout_height="63dp"
        android:layout_marginStart="80dp"
        android:layout_marginEnd="81dp"
        android:layout_marginBottom="8dp"
        android:backgroundTint="#009999"
        android:text="@string/answer_3"
        app:layout_constraintBottom_toTopOf="@+id/buttonAnswer4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonAnswer2" />

    <Button
        android:id="@+id/buttonAnswer4"
        android:layout_width="250dp"
        android:layout_height="63dp"
        android:layout_marginStart="80dp"
        android:layout_marginEnd="81dp"
        android:layout_marginBottom="8dp"
        android:backgroundTint="#009999"
        android:text="@string/answer_4"
        app:layout_constraintBottom_toTopOf="@+id/buttonAnswer5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonAnswer3" />

    <Button
        android:id="@+id/buttonAnswer5"
        android:layout_width="250dp"
        android:layout_height="63dp"
        android:layout_marginStart="80dp"
        android:layout_marginEnd="81dp"
        android:layout_marginBottom="8dp"
        android:backgroundTint="#009999"
        android:text="@string/answer_5"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonAnswer4" />

</androidx.constraintlayout.widget.ConstraintLayout>
